--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/PI_3S?useTimezone=true&serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=7005
+spring.datasource.url=jdbc:mysql://mysql.hugolutke.com.br/hugolutke01
+spring.datasource.username=hugolutke01
+spring.datasource.password=projeto3
