--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
             <version>8.0.11</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>1.3.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
