--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+api.baseUrl=http://localhost:8081/
+api.grant_type=passwor
+api.login=PI_3S
+api.senha=SenhaDoPI
 spring.datasource.url=jdbc:mysql://mysql.hugolutke.com.br/hugolutke01
 spring.datasource.username=hugolutke01
 spring.datasource.password=projeto3
