--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@
 /nbdist/
 /.nb-gradle/
 /bin/
+/.vscode/launch.json
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/academiaweb/v16/.suo
+/.vs/academiaweb/config/applicationhost.config
