--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
             <version>2.9.0</version>
             <type>jar</type>
         </dependency>
+                <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.2.6</version>
+</dependency>
     </dependencies>
 
     <build>
