alterações na sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 api.baseUrl=https://academiabd.herokuapp.com/
-api.grant_type=passwor
+api.grant_type=password
 api.login=PI_3S
 api.senha=SenhaDoPI
 spring.datasource.url=jdbc:postgresql://ec2-23-23-241-119.compute-1.amazonaws.com:5432/d9l8gglklps97t
